--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ dependencies:
   story: ^1.1.0
   flutter_cache_manager: ^3.3.1
   loading_animation_widget: ^1.2.0+4
-  geolocator: ^10.1.0
+  location: ^5.0.3
   add_2_calendar: ^3.0.1
   url_launcher: ^6.2.2
 
