--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   carousel_slider: ^4.2.1
   image_picker: ^1.0.4
   intl: ^0.18.1
-  shimmer: ^3.0.0
+  shimmer: ^3.0.0 
   permission_handler: ^11.0.1
   photo_view: ^0.14.0
   page_transition: ^2.1.0
@@ -63,12 +63,15 @@ dependencies:
   animated_toggle_switch: ^0.8.0
   flutter_rating_bar: ^4.0.1
   video_player: ^2.8.1
-  story: ^1.1.0
+  
   flutter_cache_manager: ^3.3.1
-  loading_animation_widget: ^1.2.0+4
+
   location: ^5.0.3
   add_2_calendar: ^3.0.1
   url_launcher: ^6.2.2
+  table_calendar: ^3.0.9
+  flutter_polyline_points: ^2.0.0
+  
 
 dev_dependencies:
   flutter_test:
