--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   url_launcher: ^6.2.2
   table_calendar: ^3.0.9
   flutter_polyline_points: ^2.0.0
+  share_plus: ^7.2.1
   
 
 dev_dependencies:
