--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,12 @@ dependencies:
   table_calendar: ^3.0.9
   flutter_polyline_points: ^2.0.0
   share_plus: ^7.2.1
+  flutter_svg: ^2.0.9
+  
+  path_provider: ^2.1.1
+  open_file: ^3.3.2
+  
+  pdf: ^3.10.7
   
 
 dev_dependencies:
