--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
   pdf: ^3.10.7
   external_path: ^1.0.3
   flutter_advanced_switch: ^3.0.1
+  marquee: ^2.2.3
   
 
 dev_dependencies:
