--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,8 @@ dependencies:
   external_path: ^1.0.3
   flutter_advanced_switch: ^3.0.1
   marquee: ^2.2.3
+  flutter_image_compress: ^2.1.0
+  # video_compress: ^3.1.2
   
 
 dev_dependencies:
