--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   flutter_advanced_switch: ^3.0.1
   marquee: ^2.2.3
   flutter_image_compress: ^2.1.0
+  video_compress_plus: ^1.0.0
   # video_compress: ^3.1.2
   
 
