--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ dependencies:
   flutter_background_service_android: ^6.0.1
   flutter_background_service_ios: ^5.0.0
   connectivity_plus: ^5.0.2
+  syncfusion_flutter_sliders: ^22.2.11
 
   
   # video_compress: ^3.1.2
