--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -53,7 +53,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-       
+       <service
+       android:name="com.ekasetiawans.flutterbackgroundservice.BackgroundService"
+       android:enabled="true"
+       android:exported="false"/>
+
         <service
             android:name="com.mycompany.evento"
             android:enabled="true"
