--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          package="xxx.xxx.xxxxx">
+          package="com.example.evento">
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET"/>
