--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,8 @@ dependencies:
   syncfusion_flutter_sliders: ^22.2.11
   socket_io_client: ^2.0.3+1
   web_socket_channel: ^2.4.0
+  firebase_core: ^2.25.0
+  firebase_messaging: ^14.7.11
 
   
   # video_compress: ^3.1.2
