--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,17 +85,15 @@ dependencies:
   video_compress_plus: ^1.0.0
   flutter_local_notifications: ^16.3.0
   # pusher_client: ^2.0.0
-  pusher_channels_flutter: ^2.2.0
   flutter_background_service: ^5.0.5
   flutter_background_service_android: ^6.0.1
   flutter_background_service_ios: ^5.0.0
   connectivity_plus: ^5.0.2
   syncfusion_flutter_sliders: ^22.2.11
-  socket_io_client: ^2.0.3+1
   web_socket_channel: ^2.4.0
-  firebase_core: ^2.25.0
-  firebase_messaging: ^14.7.11
-
+  workmanager: ^0.5.2
+  
+  
   
   # video_compress: ^3.1.2
   
