--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   shared_preferences: ^2.2.2
   easy_localization: ^3.0.3
   dartz: ^0.10.1
-  http: ^1.1.0
+  http: ^1.2.0
   http_parser: ^4.0.2
   flutter_animate: ^4.3.0
   smooth_page_indicator: ^1.1.0
@@ -92,6 +92,8 @@ dependencies:
   syncfusion_flutter_sliders: ^22.2.11
   web_socket_channel: ^2.4.0
   workmanager: ^0.5.2
+  google_places_flutter: ^2.0.7
+  
   
   
   
