--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,9 @@ dependencies:
   web_socket_channel: ^2.4.0
   workmanager: ^0.5.2
   google_places_flutter: ^2.0.7
+  smooth_video_progress: ^0.0.4
+  cached_network_image: ^3.3.1
+  sizer: ^2.0.15
   
   
   
