--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,6 @@ dependencies:
   
   flutter_cache_manager: ^3.3.1
 
-  location: ^5.0.3
   add_2_calendar: ^3.0.1
   url_launcher: ^6.2.2
   table_calendar: ^3.0.9
@@ -98,7 +97,7 @@ dependencies:
   sizer: ^2.0.15
   flutter_screenutil: ^5.9.0
   geolocator: ^10.1.1
-  
+  better_player_plus: ^1.0.5
   
   
   
