--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -121,11 +121,11 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/تيست 1.png"
+  image_path: "assets/images/logo.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "assets/images/تيست 1.png"
+    image_path: "assets/images/logo.png"
     background_color: "#hexcode"
     theme_color: "#hexcode"
   
