--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,7 +94,7 @@ dependencies:
   geolocator: ^10.1.1
   better_player_plus: ^1.0.5
   flutter_launcher_icons: ^0.13.1
-  flutter_native_splash: 
+  flutter_native_splash: ^2.2.8
   pushy_flutter: ^2.0.18
   
   
@@ -105,10 +105,11 @@ dependencies:
 flutter_native_splash:
   android: true
   ios: true
-  image: "assets/images/splash.png"
+  image: "assets/images/newsplash.png"
   color: "#6E429A"
+  android_gravity: fill
   android_12:
-    image: "assets/images/splash.png"
+    image: "assets/images/newsplash.png"
     color: "#6E429A"
   
 
