--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   dropdown_button2: ^2.3.9
   barcode_widget: ^2.0.4
-  animated_toggle_switch: ^0.8.0
+  # animated_toggle_switch: ^0.8.0
   flutter_rating_bar: ^4.0.1
   video_player: ^2.8.1
   
