--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,25 +94,16 @@ dependencies:
   geolocator: ^10.1.1
   better_player_plus: ^1.0.5
   flutter_launcher_icons: ^0.13.1
-  flutter_native_splash: ^2.2.8
+  # flutter_native_splash: 
   pushy_flutter: ^2.0.18
   uni_links: ^0.5.1
+  flutter_native_splash: ^2.3.10
   
   
   
   # video_compress: ^3.1.2
   
 
-flutter_native_splash:
-  android: true
-  ios: true
-  image: "assets/images/newsplash.png"
-  image_dark: assets/images/newsplash.png
-  color: "#6E429A"
-  android_12:
-    image: "assets/images/newsplash.png"
-    image_dark: assets/images/newsplash.png
-    color: "#6E429A"
   
 
 
@@ -121,6 +112,18 @@ flutter_native_splash:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+flutter_native_splash:
+  android: true
+  ios: true
+  image: "assets/images/newsplash.png"
+  image_dark: assets/images/newsplash.png
+  color: "#6E429A"
+  color_dark: "#6E429A"
+  android_12:
+    image: "assets/images/newsplash.png"
+    image_dark: assets/images/newsplash.png
+    color: "#6E429A"
+    color_dark: "#6E429A"
 
 
 flutter_launcher_icons:
@@ -133,7 +136,8 @@ flutter_launcher_icons:
     image_path: "assets/images/logo.png"
     background_color: "#hexcode"
     theme_color: "#hexcode"
-  
+
+
 
 
 
