--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   video_player: ^2.8.1
   
+  
   flutter_cache_manager: ^3.3.1
 
   add_2_calendar: ^3.0.1
@@ -99,6 +100,7 @@ dependencies:
   
   flutter_native_splash: ^2.3.10
   app_links: ^4.0.1
+  qr_flutter: ^4.1.0
   
   
   
